--- a/PART5_ANSIBLE/inventory.yaml
+++ b/PART5_ANSIBLE/inventory.yaml
@@ -4,7 +4,7 @@ all:
   children:
     iosxe:
       hosts:
-        sandbox-iosxe-recomm-1.cisco.com
+        sandbox-iosxe-latest-1.cisco.com
   vars:
     ansible_connection: network_cli
     ansible_user: developer
